Fix for truncated arrows in bottom carousel

--- a/src/main/webapp/themes/default/js/galleria/themes/europeanax/galleria.europeanax.css
+++ b/src/main/webapp/themes/default/js/galleria/themes/europeanax/galleria.europeanax.css
@@ -362,13 +362,13 @@
 	
 	.europeana-carousel .galleria-thumb-nav-left,
 	.europeana-carousel .galleria-thumb-nav-right {
-		left:				-0.2em;
+		left:				-0.1em;
 		right:				auto;
 	}
 	
 	.europeana-carousel .galleria-thumb-nav-right {
 	    left:				auto;
-	    right:				-0.3em;
+	    right:				-0.2em;
 	}
 	
 }
